k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-sso
  labels:
    name: microservices-sso
